 cnp-deny-malware-tntbotinger-communication-er5ref2.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cnp-deny-malware-tntbotinger-communication"-xnogdkk
  namespace: kube-system
spec:
  description: "Policy to deny tntbotinger communication over port 6697, 51982 and 1982"
  endpointSelector:
    matchLabels:
      controller-revision-hash: 5848cb99f
      k8s-app: cilium-gke-node-init
      pod-template-generation: 1
